questions 1-5: что-то начал...

--- a/document.tex
+++ b/document.tex
@@ -27,6 +27,7 @@
 		decoration={snake,amplitude=.4mm,segment length=2mm,post length=1mm}},
 }
 \usepackage{caption}
+\usepackage{tensor}
 \usepackage{float}
 \usepackage{multirow}
 \usepackage{multicol}
@@ -85,6 +86,8 @@
 \newcommand{\Spl}{\mathrm{Spl}}
 \newcommand{\spl}{\mathrm{spl}}
 
+\DeclareMathAlphabet{\mathbfit}{OML}{cmm}{b}{it}
+
 
 \newcounter{problem} 
 \newenvironment{problem}[1][]
@@ -113,7 +116,7 @@
 
 
 \begin{document}
-	%  \tableofcontents \newpage
+	%  \tableofcontents 
 	
 	\begin{center}
 		\LARGE \bf	
@@ -121,61 +124,61 @@
 		\rule{\textwidth}{0.4pt}
 	\end{center}
 	
-	\input{teor-01} \newpage
-	\input{teor-02} \newpage
-	\input{teor-03} \newpage
-	\input{teor-04} \newpage
-	\input{teor-05} \newpage
-	\input{teor-06} \newpage
-	\input{teor-07} \newpage
-	\input{teor-08} \newpage
-	\input{teor-09} \newpage
-	\input{teor-10} \newpage
-	\input{teor-11} \newpage
-	\input{teor-12} \newpage
-	\input{teor-13} \newpage
-	\input{teor-14} \newpage
-	\input{teor-15} \newpage
-	\input{teor-16} \newpage
-	\input{teor-17} \newpage
-	\input{teor-18} \newpage
-	\input{teor-19} \newpage
-	\input{teor-20} \newpage
-	\input{teor-21} \newpage
-	\input{teor-22} \newpage
-	\input{teor-23} \newpage
-	\input{teor-24} \newpage
-	\input{teor-25} \newpage
-	\input{teor-26} \newpage
-	\input{teor-27} \newpage
-	\input{teor-28} \newpage
-	\input{teor-29} \newpage
-	\input{teor-30} \newpage
-	\input{teor-31} \newpage
-	\input{teor-32} \newpage
-	\input{teor-33} \newpage
-	\input{teor-34} \newpage
-	\input{teor-35} \newpage
-	\input{teor-36} \newpage
-	\input{teor-37} \newpage
-	\input{teor-38} \newpage
-	\input{teor-39} \newpage
-	\input{teor-40} \newpage
-	\input{teor-41} \newpage
-	\input{teor-42} \newpage
-	\input{teor-43} \newpage
-	\input{teor-44} \newpage
-	\input{teor-45} \newpage
-	\input{teor-46} \newpage
-	\input{teor-47} \newpage
-	\input{teor-48} \newpage
-	\input{teor-49} \newpage
-	\input{teor-50} \newpage
-	\input{teor-51} \newpage
-	\input{teor-52} \newpage
-	\input{teor-53} \newpage
-	\input{teor-54} \newpage
-	\input{teor-55} \newpage
-	\input{teor-56} \newpage
+	\input{teor-01}
+	\input{teor-02} 
+	\input{teor-03} 
+	\input{teor-04} 
+	\input{teor-05} 
+	\input{teor-06} 
+	\input{teor-07} 
+	\input{teor-08} 
+	\input{teor-09} 
+	\input{teor-10} 
+	\input{teor-11} 
+	\input{teor-12} 
+	\input{teor-13} 
+	\input{teor-14} 
+	\input{teor-15} 
+	\input{teor-16} 
+	\input{teor-17} 
+	\input{teor-18} 
+	\input{teor-19} 
+	\input{teor-20} 
+	\input{teor-21} 
+	\input{teor-22} 
+	\input{teor-23} 
+	\input{teor-24} 
+	\input{teor-25} 
+	\input{teor-26} 
+	\input{teor-27} 
+	\input{teor-28} 
+	\input{teor-29} 
+	\input{teor-30} 
+	\input{teor-31} 
+	\input{teor-32} 
+	\input{teor-33} 
+	\input{teor-34} 
+	\input{teor-35} 
+	\input{teor-36} 
+	\input{teor-37} 
+	\input{teor-38} 
+	\input{teor-39} 
+	\input{teor-40} 
+	\input{teor-41} 
+	\input{teor-42} 
+	\input{teor-43} 
+	\input{teor-44} 
+	\input{teor-45} 
+	\input{teor-46} 
+	\input{teor-47} 
+	\input{teor-48} 
+	\input{teor-49} 
+	\input{teor-50} 
+	\input{teor-51} 
+	\input{teor-52} 
+	\input{teor-53} 
+	\input{teor-54} 
+	\input{teor-55} 
+	\input{teor-56} 
 	
 \end{document}
