--- a/teor-01.tex
+++ b/teor-01.tex
@@ -1,1 +1,11 @@
 \que{Методы решений линейных разностных уравнений (2-го порядка) с постоянными коэффициентами и специальной правой частью.}
+
+\textit{Линейное разностное уравнение 2-го порядка с постоянными коэффициентами} определяется коэффициентами $a_0, a_1 \in \mathbb{R}$, гдё $a_0 \not = 0$, линейным оператором $\hat{\mathbfit{A}} = \hat{\mathbfit{D}}^2 + a_1 \hat{\mathbfit{D}} + a_0 \hat{\mathbfit{I}} \in \mathrm{End}(V)$, где $\hat{\mathbfit{I}} \in \mathrm{End}(V)$ --- тождественный оператор, для которого $\hat{\mathbfit{I}}(v_{(\cdot)}) = v_{(\cdot)}$, если $v_{(\cdot)} \in V$, и последовательностью $f_{(\cdot)} = (f_n)_{\mathbb{Z}} \in V$. Уравнение определяющиеся такими характеристиками, имеет вид: 
+\begin{gather*}
+	\hat{\mathbfit{A}}(\mathbfit{y}_{(\cdot)}) = \left(\hat{\mathbfit{D}}^2 + a_1 \hat{\mathbfit{D}} + a_0 \hat{\mathbfit{I}}\right)(\mathbfit{y}_{(\cdot)}) = \hat{\mathbfit{D}}^2(\mathbfit{y}_{(\cdot)}) + a_1 \hat{\mathbfit{D}}(\mathbfit{y}_{(\cdot)}) + a_0 \hat{\mathbfit{I}}(\mathbfit{y}_{(\cdot)}) = \mathbfit{f}_{(\cdot)} \Leftrightarrow \\
+	\Leftrightarrow y_{n + 2} + a_1 y_{n + 1} + a_0 y_n = f_n; \quad n \in \mathbb{Z}. 
+\end{gather*} 
+
+\dots 
+
+%TODO: Кутыркин отдельно рассматривает решение однородных и потом говорит о виде частного решения, поэтому хз какие <<методы>> тут есть..? Переписать Кутыркина
