--- a/teor-02.tex
+++ b/teor-02.tex
@@ -1,1 +1,15 @@
-\que{Понятия сетки на отрезке, её шага, (равномерные и центрально равномерные сетки), сеточной функции, схемы сеток на отрезке, схемы сеточных функций; сеточного отображения для линейного пространства функций, определённых на отрезке, и схемы сеточных отображений, инжуцированной схемой сеток на отрезке.}
+\que{Понятия сетки на отрезке, её шага, (равномерные и центрально равномерные сетки), сеточной функции, схемы сеток на отрезке, схемы сеточных функций; сеточного отображения для линейного пространства функций, определённых на отрезке, и схемы сеточных отображений, индуцированной схемой сеток на отрезке.}
+
+Рассмотрим на отрезке $[a, b]$ попарно различные точки $\tau_0, \tau_1, \dots, \tau_k \in [a, b]$.
+
+\begin{definition}
+	Список точек $A = \Big<\tau_0, \tau_1, \dots, \tau_k\Big> \subset [a, b]$ называют \textit{сеткой отрезка} $[a, b]$. Указанные в сетке $A$ точки отрезка называют \textit{узлами сетки} $A$. \textit{Шагом сетки} называют число $\mathrm{stp}(A) = \max\{\tau_0 - a, \tau_1 - \tau_0, \tau_2 - \tau_1, \dotsc, \tau_k - \tau_{k - 1}, b - \tau_k\}$. Если выполняются условия $a = \tau_0, \tau_1 - \tau_0 = \tau_2 - \tau_1 = \dotsc = \tau_k - \tau_{k - 1}, \tau_k = b$, то такую сетку называют \textit{равномерной}. В этом случае равномерная сетка $A$ индуцирует \textit{центрально-равномерную сетку} $B = \Big<\frac{\tau_1 + \tau_0}{2}, \frac{\tau_2 + \tau_1}{2}, \dotsc, \frac{\tau_k + \tau_{k - 1}}{2}\Big>$, для которой $\mathrm{stp}(A) = \mathrm{stp}(B) = \frac{b - a}{k}$. 
+	
+	Последовательность $A_{(\cdot)} = (A_k)_{\mathbb{N}}$ сеток отрезка $[a, b]$ называют \textit{схемой сеток отрезка} $[a, b]$, если $\lim\limits_{k \to +\infty}{\mathrm{stp}(A_k)} = 0$.
+	
+	Если каждому узлу $\tau_i (i = \overline{1, k})$ сетки $A = \Big<\tau_0, \tau_1, \dotsc, \tau_k\Big> \subset [a, b]$ отрезка $[a, b]$ поставлено в соответствие единственное число $y^i \in \mathbb{R}$, то говорят, что задана $A$-сеточная функция, для которой, благодаря контексту используем обозначение $\tensor[^{>}]{\mathbf{y}}{} = [y^0, y^1, \dotsc, y^k\Big> \in \tensor[^{>}]{\underline{\mathbb{R}}}{^{\abs{A}}}(A)$, где $\abs{A} = k + 1$ и $\tensor[^{>}]{\underline{\mathbb{R}}}{^{\abs{A}}}(A)$ --- нормированное пространство таких $A$-сеточных функций с чебышёвской нормой.  
+	
+	Если задана схема сеток $A_{(\cdot)} = (A_k)_{\mathbb{N}}$ отрезка $[a, b]$, то последовательность сеточных функций $\tensor[^{>}]{\mathbf{y}}{_{(\cdot)}} = (\tensor[^{>}]{\mathbf{y}}{_{(k)}} \in \tensor[^{>}]{\underline{\mathbb{R}}}{^{\abs{A_k}}}(A_k))_{\mathbb{N}}$ называют схемой $A_{(\cdot)}$-сеточных функций. 
+	
+	Для сетки $A = \Big<\tau_0, \tau_1, \dotsc, \tau_k\Big> \subset [a, b]$ и линейного пространства $\underline{\mathbf{B}}([a, b], \underline{\mathbb{R}})$ (с чебышёвской нормой) определённых и ограниченных на отрезке $[a, b]$ функций индуцируется $A$-сеточное отображение $\hat{A}: \underline{\mathbf{B}}([a, b], \underline{\mathbb{R}}) \to \tensor[^{>}]{\underline{\mathbb{R}}}{^{\abs{A}}}(A)$, для которого $\hat{A}(f) = \tensor[^{>}]{\mathbf{f}}{} = [f(\tau_0), f(\tau_1), \dotsc, f(\tau_k)\Big> \in \tensor[^{>}]{\underline{\mathbb{R}}}{^{\abs{A}}}(A)$, если $f \in \underline{\mathbf{B}}([a, b], \mathbb{R})$. Аналогично схемы сеточных функций вводим схему сеточных отображений. 
+\end{definition}
