--- a/teor-05.tex
+++ b/teor-05.tex
@@ -1,1 +1,28 @@
 \que{Разностные производные, их шаблоны и порядок аппроксимирования. Примеры обыкновенных центральных разностных производных 1-го и 2-го порядков.}
+
+Для приближённого вычисления производных от достаточно гладких на отрезке функций используются разностные производные, являющиеся линейными формами от соответствующих сеточных функций. 
+
+Пусть $f$ --- достаточно гладкая функция на отрезке $[a, b]$, включающем точку $\tau_0 \in [a, b]$. Рассмотрим на числовой прямой $\underline{\mathbb{R}}$ равномерную сетку $A_h = \Big<\tau_j = jh : j \in \mathbb{Z}\Big>$ шага $\mathrm{step}(A_h) = h$ и её подсетку $B_h = \Big<\tau_{-q}, \tau_{-q + 1, \dotsc, \tau_0, \dotsc, \tau_p}\Big> \subset [a, b]$, индуцирующую сеточную функцию $\tensor[^{>}]{\mathbf{f}}{} = \Big<f(\tau_{-q}), f(\tau_{-q + 1}), \dotsc, f(\tau_0), \dotsc, f(\tau_p)\Big> \in \tensor[^{>}]{\mathbb{R}}{^{\abs{B_h}}}(B_h)$.
+
+\begin{definition}
+	\textit{Разностной производной} $m$-го порядка для $m$-ой производной  $f^{(m)}(\tau_0)$ функции $f$ в точке $\tau_0 \in [a, b]$ называют линейную форму от сеточной функции $\tensor[^{>}]{\mathbf{f}}{} \in \hat{B}_h(f)$ вида:
+	\begin{equation*}
+		\hat{D}(B_h, \hat{B}_h(f)) = c_{-q}(h) f(\tau_{-q}) + c_{-q + 1}(h)f(\tau_{-q + 1}) + \dotsc + c_0(h) f(\tau_0) + \dotsc + c_p(h) f(\tau_p), 
+	\end{equation*}
+	где $c_j(h)$ --- числовой коэффициент, зависящий от шага сетки $\mathrm{step}(B_h) = h$ для $j = \overline{-q, p}$. 
+	
+	Если для разостной формулы выполняется условие:
+	\begin{equation*}
+		f^{(m)}(\tau_0) = \hat{D}(B_h, \hat{B}_h(f)) + O(h^{\alpha}) \text{ при } h \to 0,
+	\end{equation*}
+	то число $\alpha > 0$ называют \textit{порядком аппроксимации разностной производной} для производной $f^{(m)}(\tau_0)$ функции $f$ в узле $\tau_0 \in [a, b]$, нахываемым \textit{главным узлом сетки} $B_h$ для разностной производной. 
+	
+	\begin{example}[разностных формул]
+		\begin{align*}
+			&\frac{f_i - f_{i - 1}}{h} = \left(\dv{f}{\tau}\right)_{\tau_i} + O(h) \text{ при } h \to 0; \\
+			&\frac{f_{i + 1} - f_{i - 1}}{h} = \left(\dv{f}{\tau}\right)_{\tau_i} + O(h^2) \text{ при } h \to 0; \\
+			&\frac{f_{i + 1} - 2 f_i - f_{i - 1}}{h} = \left(\dv[2]{f}{\tau}\right)_{\tau_i} + O(h^2) \text{ при } h \to 0,
+		\end{align*}
+		где $f(\tau_{i - 1}) = f_{i - 1}, f(\tau_i) = f_i, f(\tau_{i + 1}) = f_{i + 1}$. 
+	\end{example}
+\end{definition}
