questions 6-8: а теперь вопрос, надо ли продолжать..?

--- a/teor-06.tex
+++ b/teor-06.tex
@@ -1,1 +1,19 @@
 \que{Табуляции и схема табуляций банахова пространства. Сеточная табуляция и сеточное табулирование пространства непрерывных на отрезке функций.}
+
+\begin{definition}
+	В линейном арифметическом пространстве $\tensor[^{>}]{\mathbb{R}}{^k}$ введем норму $\norm{\cdot}_{0}$. Тогда нормированное пространство $U = (\tensor[^{>}]{\mathbb{R}}{^k}, \norm{\cdot}_{0})$ называем \textit{табличным пространством}. 
+	
+	Последовательность табличных пространств $U_{(\cdot)} = \left(U_{(n)} = (\tensor[^{>}]{\mathbb{R}}{^k}), \norm{\cdot}_{(n)}\right)_{\mathbb{N}}$ называют \textit{схемой табличных пространств}, если $\lim\limits_{n \to +\infty}{\mathrm{dim}(U_{(n)})} = +\infty$.
+\end{definition}
+
+Рассмотрим банахово пространство $Y_0 = (Y_0, \norm{\cdot})$ и схему табличных пространств $U_{(\cdot)} = \left(U_{(n)} = (\tensor[^{>}]{\mathbb{R}}{^{k_n}}), \norm{\cdot}_{(n)}\right)_{\mathbb{N}}$. Кроме того, предполагаем, что для каждой $k \in \mathbb{N}$ определён эпиморфизм $T_{(k)} \in \Hom_c(Y_0, U_{(k)})$.
+
+\begin{definition}
+	Для каждого $k \in \mathbb{N}$ эпиморфизм $T_{(k)} \in \Hom_c(Y_0, U_{(k)})$ называют \textit{табуляцией банахова пространства} $Y_0 = (Y_0, \norm{\cdot})$.
+	
+	Последовательность эпиморфизмов $T_{(\cdot)} = \left(T_{(k)} \in \Hom_c(Y_0, U_{(k)})\right)_{\mathbb{N}}$ называют \textit{схемой табуляций (табулированием) банахова пространства} $Y_0 = (Y_0, \norm{\cdot})$, если последовательность норм $(\norm{T_{(k)}})_{\mathbb{N}}$ ограничена и для любого $y_0 \in Y_0$ выполняется условие: $\norm{y_0} = \lim\limits_{k \to +\infty}{\norm{T_{(k)}(y_0)}}$.
+\end{definition}
+
+\begin{utv}
+	Для чебышёвского банахового пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ рассмотрим на отрезке $[a, b]$ схему сеток $A_{(\cdot)} = (A_{k} = \big<\tau_0^k, \tau_1^k, \dotsc, \tau_k^k\big>)_{\mathbb{N}}$. Для каждого $k \in \mathbb{N}$ определим $A_k$-сеточный эпиморфизм $T_{(k)} = \hat{A}_k \in \Hom_c(Y_0, U_{(k)} = \tensor[^{>}]{\mathbb{R}}{^{\abs{A}}}(A))$, то есть для любого $y_0 \in Y_0$ полагаем, что $T_{(k)}(y_0) = \hat{A}_k(y_0) = [y_0(\tau_0^k), y_0(\tau_1^k), \dotsc, y_0(\tau_k^k)\big>$. Тогда вследствии \textit{теоремы Кантора} о равномерной непрерывности функции непрерывной на отрезке, последовательность $T_{(\cdot)} = (T_{(k)})_{\mathbb{N}}$ будет схемой табуляций (табулированием) банахова пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$. 
+\end{utv}
