--- a/teor-07.tex
+++ b/teor-07.tex
@@ -1,1 +1,27 @@
 \que{База, базис аппроксимации и схема аппроксимации (аппроксимирования) линейного многообразия в банаховом пространстве; сходимость, аналитическая корректность и корректность аппроксимирования. Примеры корректного и расходящегося аппроксимирования.}
+
+В банаховом пространстве $Y_0 = (Y_0, \norm{\cdot})$ рассмотрим сепарабельное линейное многообразие $X_0 = (X_0, \norm{\cdot}) \subseteq Y_0$. Кроме того, в пространстве $Y_0 = (Y_0, \norm{\cdot})$ введена конечно линейно независимая система (базис) элементов $H = \big<h_0, h_1, \dotsc, h_k\big>$ и задан эпиморфизм $\hat{p}_k \in \Hom_c(Y_0, [H])$, где $[H]$ --- линейная оболочка системы $H = \big<h_0, h_1, \dotsc, h_k\big>$. Тогда эпиморфизм $\hat{p} \in \Hom_c(Y_0, [H])$ называют аппроксимацией линейного многообразия $X_0 \subseteq Y_0$ и значение эпиморфизма $\hat{p}(x_0)$ --- аппроксимацией ($\hat{p}$-аппроксимацией) элемента $x_0 \in X_0$. 
+
+\begin{definition}
+	В пространстве $Y_0 = (Y_0, \norm{\cdot})$ рассмотрим последовательность $H_{(\cdot)} = (H_k \subset Y_0)_{\mathbb{N}}$ конечных линейно независимых систем (базисов).
+	
+	Последовательность $H_{(\cdot)} = (H_k \subset Y_0)_{\mathbb{N}}$ называют \textit{базой аппроксимации} (элементов) линейного многообразия $X_0 \subseteq Y_0$, если для любого элемента $x_0 \in X_0$ существует такая последовательность $y_{(\cdot)} = (y_k \subset [H_k])_{\mathbb{N}}$, для которой $\lim\limits_{k \to +\infty}{y_k} = x_0$ (это свойство возможно обеспечивать только в том случае, когда линейное многообразие $X_0 \subseteq Y_0$ --- сепарабельно). 
+	
+	Линейно независимую систему $g_{(\cdot)} = (g_{k - 1} \in Y_0)_{\mathbb{N}}$ называют \textit{базисом аппроксимации} пространства $X_0 \subseteq Y_0$, если последовательность $G_{(\cdot)} = (G_k = \big<g_0, g_1, \dotsc, g_k\big>)_{\mathbb{N}}$ является базой аппроксимации пространства $X_0 \subseteq Y_0$.
+\end{definition}
+
+\begin{definition}
+	Пусть $H_{(\cdot)} = (H_k \subset Y_0)_{\mathbb{N}}$ --- база аппроксимации линейного многообразия $X_0 \subseteq Y_0$ и задана последовательность $\hat{p}_{(\cdot)} = (\hat{p}_k \in \Hom_c(Y_0, [H_k]))_{\mathbb{N}}$ аппроксимациий его элементов. 
+	
+	Последовательность $\hat{p}_{(\cdot)}$ называют \textit{схемой аппроксимациий} (аппроксимированием) элементов линейного многообразия $X_0 \subset Y_0$, --- \textit{устойчивой}, если последовательность $(\norm{\hat{p}_k})_{\mathbb{N}}$ --- ограничена, --- \textit{сходящейся}, если для любого элемента $x_0 \in X_0$ существует предел $\lim\limits_{k \to +\infty}{\hat{p}_k(x_0)} \in X_0$, --- \textit{аналитически корректной}, если она является сходящейся и $\lim\limits_{k \to +\infty}{\hat{p}_k(x_0)} = x_0$ для любого элемента $x_0 \in X_0$. Аналитически корректную и устойчивую схему аппроксимаций называют корректной схемой аппроксимации. 
+\end{definition}
+
+\begin{example}
+	\textbf{Расходящееся аппроксимирование. } Рассмотрим в банаховом пространстве $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ линейное многообразие $X_0 = \underline{C}^1([a, b], \underline{\mathbb{R}}) \subset Y_0$ --- гладких на отрезке $[a, b]$ функций. В качестве базы аппроксимации линейного могообразия $X_0 \subset Y_0$ выберем последовательность $H_{(\cdot)} = \left(H_k = \big<h_0 \equiv 1, h_1 = \tau, h_2 = \tau^2, \dotsc, h_k = \tau^k\big> \subset Y_0\right)_{\mathbb{N}}$. Согласно \textit{теореме Веерштраса} (формулировка: любая непрерывная на отрезке функция допускает сколь угодно точное приближение с помощью полинома), эта последовательность является базой аппроксимации пространства $X_0 \subset Y_0$. Схему аппроксимаций многообразия $X_0 \subset Y_0$ зададим с помощью последовательности схемы сеток $A_{(\cdot)} = (A_k)_{\mathbb{N}}$ отрезка $[a, b]$ и последовательности $\hat{p}_{(\cdot)} = (\hat{p}_k \in \Hom_c(Y_0, [H_k]))_{\mathbb{N}}$ следующим образом. Для гладкой функции $x_0 \in X_0$ полагаем, что $\hat{p}_k(x_0) = L(A_k, \hat{A}_k(x_0))$ --- интерполяционный полином Лагранжа для сеточной функции $\hat{A}_k(x_0) \in \tensor[^{>}]{\mathbb{R}}{^{\abs{A_k}}}(A_k)$, если $k \in \mathbb{N}$. Тогда, в общем случае такое аппроксимирование Лагранжа не будет даже сходящимся.
+	
+	\textbf{Корректное аппроксимирование. } Для банахова пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ рассмотрим схему сеточно-сплайновой аппроксимации $\hat{p}_{(\cdot)} = (\hat{p}_k \in \Hom_c(Y_0, [H_k]))_{\mathbb{N}}$, которая индуцирована схемой $A_{(\cdot)} = (A_k = \big<a = \tau_0^k, \tau_1^k, \dotsc, \tau_k^k = b\big>)_{\mathbb{N}}$ сеток отрезка $[a, b]$ следующим образом. Для $k \in \mathbb{N}$ базис $H_k = (h_0^k, h_1^k, \dotsc, h_k^k) \subset Y_0$ является базисом пространства сплайнов $\Spl_1(A_k)$ первой степени дефекта 1, т.е. для номеров $j = \overline{0, k}$ и функции $y_0 \in Y_0$ следует, что: 
+	\begin{equation*}
+		\hat{p}_k(y_0) = \spl_1(A_k, \hat{A}_k(y_0)) = \hat{H}_k \circ \hat{A}_k(y_0) = \sum \limits_{j = 0}^{k} y_0(\tau_j^k) h_j^k,
+	\end{equation*} 
+	где $\hat{H}_k : \tensor[^{>}]{\mathbb{R}}{^{\abs{A_k}}}(A_k) \to [H_k]$ --- $H_k$\textit{-базисный изометричный (интерполяционный) изоморфизм}, для которого $\hat{H}_k(\hat{A}_k(y_0)) = \sum\limits_{j = 0}^{k} y_0(\tau^k_j) h^k_j$. Следовательно, если $k \in \mathbb{N}$, то для сеточной функции $\tensor[^{>}]{\mathbfit{u}}{_{(k)}} \in \tensor[^{>}]{\mathbb{R}}{^{\abs{A_k}}}(A_k)$ выполняются равенства $\hat{A}_k \circ \hat{H}_k (\tensor[^{>}]{\mathbfit{u}}{_{(k)}}) = \tensor[^{>}]{\mathbfit{u}}{_{(k)}}$ и $\norm{\tensor[^{>}]{\mathbfit{u}}{_{(k)}}} = \norm{\hat{H}_k(\tensor[^{>}]{\mathbfit{u}}{_{(k)}})}$, поскольку $H_k$ изометричный (интерполяционный) изоморфизм. В силу \textit{теоремы Кантора} о равномерной непрерывности непрерывной на отрезке функции, такая схема аппроксимации $\hat{p}_{(\cdot)}$ пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ является корректной. 
+\end{example}
