--- a/tex/document.tex
+++ b/tex/document.tex
@@ -116,69 +116,79 @@
 
 
 \begin{document}
-	%  \tableofcontents 
 	
 	\begin{center}
-		\LARGE \bf	
+		\Huge \bf	
 		\textsc{Основы сеточных методов}
 		\rule{\textwidth}{0.4pt}
 	\end{center}
 	
-	\input{teor-01}
-	\input{teor-02} 
-	\input{teor-03} 
-	\input{teor-04} 
-	\input{teor-05} 
-	\input{teor-06} 
-	\input{teor-07} 
-	\input{teor-08} 
-	\input{teor-09} 
-	\input{teor-10} 
-	\input{teor-11} 
-	\input{teor-12} 
-	\input{teor-13} 
-	\input{teor-14} 
-	\input{teor-15} 
-	\input{teor-16} 
-	\input{teor-17} 
-	\input{teor-18} 
-	\input{teor-19} 
-	\input{teor-20} 
-	\input{teor-21} 
-	\input{teor-22} 
-	\input{teor-23} 
-	\input{teor-24} 
-	\input{teor-25} 
-	\input{teor-26} 
-	\input{teor-27} 
-	\input{teor-28} 
-	\input{teor-29} 
-	\input{teor-30} 
-	\input{teor-31} 
-	\input{teor-32} 
-	\input{teor-33} 
-	\input{teor-34} 
-	\input{teor-35} 
-	\input{teor-36} 
-	\input{teor-37} 
-	\input{teor-38} 
-	\input{teor-39} 
-	\input{teor-40} 
-	\input{teor-41} 
-	\input{teor-42} 
-	\input{teor-43} 
-	\input{teor-44} 
-	\input{teor-45} 
-	\input{teor-46} 
-	\input{teor-47} 
-	\input{teor-48} 
-	\input{teor-49} 
-	\input{teor-50} 
-	\input{teor-51} 
-	\input{teor-52} 
-	\input{teor-53} 
-	\input{teor-54} 
-	\input{teor-55} 
-	\input{teor-56} 
+	% НЕ ВЫКЛЮЧАЙТЕ ОГЛАВЛЕНИЕ, КОГДА ПУШИТЕ
+	% ЧТОБЫ В ГИТХАБЕ ВСЕГДА БЫЛ ФАЙЛ С ОГЛАВЛЕНИЕМ
+	\tableofcontents
+	% если вам не нравится, выключите у себя, но не надо пушить это
+	% а еще лучше пропишите в начале файла \documentclass[12pt,draft]{article}
+	% так будет СИЛЬНО быстрее собираться для предпросмотра
 	
+	% но опять же когда пушите, не надо пушить draft
+	% чтобы выбрать какие строчки файла пушить используйте
+	% через терминал: git add -p document.tex
+	% через gui/tui: сами разберетесь
+	
+	\include{teor-01}
+	\include{teor-02} 
+	\include{teor-03} 
+	\include{teor-04} 
+	\include{teor-05} 
+	\include{teor-06} 
+	\include{teor-07} 
+	\include{teor-08} 
+	\include{teor-09} 
+	\include{teor-10} 
+	\include{teor-11} 
+	\include{teor-12} 
+	\include{teor-13} 
+	\include{teor-14} 
+	\include{teor-15} 
+	\include{teor-16} 
+	\include{teor-17} 
+	\include{teor-18} 
+	\include{teor-19} 
+	\include{teor-20} 
+	\include{teor-21} 
+	\include{teor-22} 
+	\include{teor-23} 
+	\include{teor-24} 
+	\include{teor-25} 
+	\include{teor-26} 
+	\include{teor-27} 
+	\include{teor-28} 
+	\include{teor-29} 
+	\include{teor-30} 
+	\include{teor-31} 
+	\include{teor-32} 
+	\include{teor-33} 
+	\include{teor-34} 
+	\include{teor-35} 
+	\include{teor-36} 
+	\include{teor-37} 
+	\include{teor-38} 
+	\include{teor-39} 
+	\include{teor-40} 
+	\include{teor-41} 
+	\include{teor-42} 
+	\include{teor-43} 
+	\include{teor-44} 
+	\include{teor-45} 
+	\include{teor-46} 
+	\include{teor-47} 
+	\include{teor-48} 
+	\include{teor-49} 
+	\include{teor-50} 
+	\include{teor-51} 
+	\include{teor-52} 
+	\include{teor-53} 
+	\include{teor-54} 
+	\include{teor-55} 
+	\include{teor-56}
 \end{document}
