--- a/tex/teor-08.tex
+++ b/tex/teor-08.tex
@@ -1,10 +1,9 @@
 \que{Обоснование сеточного подхода для численных методов.}
 
-Рассмотрим на примере чебышёвского банахова пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ непрерывных на отрезке $[a, b]$ функций возможность корректной замены элементов этого пространства на соответствующие схемы сеточных функций, инюуцированных схемой сеток $A_{(\cdot)} = \left(A_k = \big<a = \tau_0^k, \tau_1^k, \dotsc, \tau_k^k = b\big>\right)_{\mathbb{N}}$ отрезка $[a, b]$. Для этого введем на пространстве $Y_0$ схему сеточно-сплайновых аппроксимаций $\hat{p}_(\cdot) = \left(\hat{p}_k = \hat{H}_k \circ \hat{A}_k \in \Hom_c(Y_0, [H_k])\right)$  (из примера корректного аппроксимирования в прошлом билете). 
+Рассмотрим на примере чебышёвского банахова пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$ непрерывных на отрезке $[a, b]$ функций возможность корректной замены элементов этого пространства на соответствующие схемы сеточных функций, инюуцированных схемой сеток $$A_{(\cdot)} = \left(A_k = \big<a = \tau_0^k, \tau_1^k, \dotsc, \tau_k^k = b\big>\right)_{\mathbb{N}}$$ отрезка $[a, b]$. Для этого введем на пространстве $Y_0$ схему сеточно-сплайновых аппроксимаций $\hat{p}_(\cdot) = \left(\hat{p}_k = \hat{H}_k \circ \hat{A}_k \in \Hom_c(Y_0, [H_k])\right)$  (из примера корректного аппроксимирования в прошлом билете). 
 
 Будем говорить, что схема $A_{(\cdot)}$-сеточных функций $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}} = \left(\tensor[^{>}]{\mathbfit{u}}{_{(k)}} \in \tensor[^{>}]{\mathbb{R}}{^{\abs{A_k}}}(A_k)\right)_{\mathbb{N}}$ ассоциирована с элементом $y_0 \in Y_0$, если для схемы $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}}$ схема интерполяций $(\hat{H}_k(\tensor[^{>}]{\mathbfit{u}}{_{(k)}}) = \spl_1(A_k, \tensor[^{>}]{\mathbfit{u}}{_{(k)}}) \in [H_k])_{\mathbb{N}}$ является сходящейся и выполняется условие: $\lim\limits_{k \to +\infty}{\hat{H}_k(\tensor[^{>}]{\mathbfit{u}}{_{(k)}})} = y_0$. Следовательно, для схемы $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}}$ справедливо равенство $\lim\limits_{k \to +\infty}{\norm{\tensor[^{>}]{\mathbfit{u}}{_{(k)}}}} = \norm{y_0}$.
 
 Пусть $W_0(A_{(\cdot)})$ --- естественное линейное пространство всех тех и только тех схем $A_{(\cdot)}$-сеточных функций, которые ассоциированы с некоторым элементом пространства $Y_0$. В этом пространстве две схемы $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}}, \tensor[^{>}]{\mathbfit{v}}{_{(\cdot)}} \in W_0(A_{(\cdot)})$ ассоциированы с одной функцией $y_0 \in Y_0$ тогда и только тогда, когда схема $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}} - \tensor[^{>}]{\mathbfit{v}}{_{(\cdot)}} \in W_0(A_{(\cdot)})$ ассоциирована с нулевой функцией пространства $Y_0$ и в этом случае выполняются равенства $\lim\limits_{k \to +\infty}{\norm{\tensor[^{>}]{\mathbfit{u}}{_{(k)}}}} = \lim\limits_{k \to +\infty}{\norm{\tensor[^{>}]{\mathbfit{v}}{_{(k)}}}} = \norm{y_0}$. 
 
 Рассмотрим эпиморфизм $\Lambda \in \Hom_c(W_0(A_{(\cdot)}), Y_0)$, который схеме $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}} \in W_0(A_{(\cdot)})$ ставит в соответствие функцию $\Lambda(\tensor[^{>}]{\mathbfit{u}}{_{(k)}}) = \lim\limits_{k \to +\infty}{\hat{H}_k(\tensor[^{>}]{\mathbfit{u}}{_{(k)}})} \in Y_0$. Очевидно, что ядро $\mathrm{Ker}(\Lambda)$ эпиморфизма состоит из тех и только тех схем пространства $W_0(A_{(\cdot)})$, которые ассоциированы с тождественно нулевой функцией пространства $Y_0 = \underline{C}([a, b], \underline{\mathbb{R}})$. Поскольку $\Lambda$ --- эпиморфизм, то, в силу \textit{теоремы о гомоморфизме} из курса \textit{Линейной алгебры}, фактор-пространство $W_0(A_{(\cdot)}) / \mathrm{Ker}(\Lambda)$ изоморфно пространству $Y_0$. Для класса эквивалентности $\tensor[^{>}]{\widetilde{\mathbfit{u}}}{_{(\cdot)}} \in W_0(A_{(\cdot)}) / \mathrm{Ker}(\Lambda)$ с представителем $\tensor[^{>}]{\mathbfit{u}}{_{(\cdot)}} \in W_0(A_{(\cdot)})$, ассоциированным с функцией $y_0 \in Y_0$, по определению, полагаем, что его норма $\norm{\tensor[^{>}]{\widetilde{\mathbfit{u}}}{_{(\cdot)}}} = \norm{y_0} = \lim\limits_{k \to +\infty}{\norm{\tensor[^{>}]{\mathbfit{u}}{_{(k)}}}}$. Очевидно, что такое определение нормы в пространстве $W_0(A_{(\cdot)})/\mathrm{Ker}(\Lambda)$ --- корректно. Отсюда следует, что пространства $W_0(A_{(\cdot)}) / \mathrm{Ker}(\Lambda)$ и $Y_0$ --- изометрично изоморфны. Аналогичный изометричный изоморфизм можно построить для других нормированных функциональных пространств. Следовательно, при численном решении совместных уравнений (задач) в функциональном нормированном пространстве с помощью схем из конечномерных сеточных аналогов можно ограничиться анализом этих схем сеточных аналогов. В этом случае для схем конечномерных сеточных аналогов уравнений (задач) естественным образом вводятся понятия устойчивости, аналитической корректности и корректности, не используя перед названиями этих терминов прилагательного <<сеточная>>.
-
